k8s-network/network-policies/deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-ingress
  namespace: demo-app
spec:
  podSelector: {}
  policyTypes: [Ingress]
